Add project creation and dashboard features
Implements project creation form, API integration, and dashboard listing in the frontend using React Query, React Hook Form, and Zod. Adds axios instance, error handling, and toast notifications. Updates routing, types, and configuration for environment variables and module resolution. Backend now includes CORS configuration for development and production, with new dependencies added.

--- a/uptask-frontend/tsconfig.json
+++ b/uptask-frontend/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": ["ES2020", "DOM", "WebWorker"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "types": ["vite/client"],
 
     /* Configuración clave del alias */
     "baseUrl": "./src", // Indica la carpeta base para la resolución de módulos
